# atlas

./: .dockerignore  .gitignore  .release.toml  CHANGELOG.md  Cargo.toml  README.md  agent.md  docker-compose.yml
.cargo/: config.toml
.copilot/: copilot-instructions.md
.githooks/: pre-commit
.github/workflows/: ci-conditional.yml  ci.yml  docker-build.yml  pages.yml  release.yml
crates/apps/native/: Cargo.toml
crates/apps/native/src/: main.rs
crates/apps/server/: Cargo.toml  Dockerfile  Dockerfile.dem-pipeline
crates/apps/server/src/: data_sources.rs  feeds.rs  main.rs  webhooks.rs  ws_streaming.rs
crates/apps/terrain_server/: Cargo.toml  Dockerfile
crates/apps/terrain_server/src/: main.rs
crates/apps/viewer_native/: Cargo.toml
crates/apps/viewer_native/src/: main.rs
crates/apps/viewer_web/: Cargo.toml  Dockerfile  Trunk.toml  index.html
crates/apps/viewer_web/assets/: scene.manifest.json
crates/apps/viewer_web/assets/chunks/: regions.avc  regions.json
crates/apps/viewer_web/src/: lib.rs  wgpu.rs
crates/apps/web/: Cargo.toml  Dockerfile  index.html  nginx.conf
crates/apps/web/assets/: scene.manifest.json  world.pmtiles
crates/apps/web/assets/chunks/: air_corridors.avc  air_corridors.json  cities.avc  cities.json
crates/apps/web/src/: globe_controller.rs  lib.rs  wgpu.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/compute/: Cargo.toml
crates/compute/src/: lib.rs  program_binding.rs  queue.rs
crates/compute/src/analysis/: mod.rs  spatial.rs  statistics.rs  temporal.rs
crates/compute/src/vm/: bytecode.rs  mod.rs
crates/formats/: Cargo.toml
crates/formats/src/: analysis_chunk.rs  lib.rs  manifest.rs  scene_ingest.rs  scene_loader.rs  scene_package.rs  terrain_chunk.rs  vector_chunk.rs  vector_chunk_avc.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: arena.rs  bounds.rs  handles.rs  ids.rs  lib.rs  time.rs
crates/foundation/src/math/: ecef.rs  geodesy.rs  local.rs  mod.rs  precision.rs  projection.rs  vec.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: buffers.rs  context.rs  lib.rs  renderer.rs  textures.rs
crates/layers/: Cargo.toml
crates/layers/src/: labels.rs  layer.rs  lib.rs  objects.rs  query.rs  raster.rs  symbology.rs  terrain.rs  vector.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: budget.rs  event_bus.rs  frame.rs  job.rs  lib.rs  metrics.rs  scheduler.rs  work_queue.rs
crates/scene/: Cargo.toml
crates/scene/src/: entity.rs  lib.rs  picking.rs  query.rs  selection.rs  visibility.rs  world.rs
crates/scene/src/components/: bounds.rs  drawable2d.rs  drawable3d.rs  mod.rs  properties.rs  time_span.rs  transform.rs  vector_geometry.rs  visibility.rs
crates/scene/src/prefabs/: globe.rs  mod.rs
crates/scene/src/spatial/: bvh.rs  mod.rs  quadtree.rs
crates/scene/src/temporal/: interval_tree.rs  mod.rs
crates/streaming/: Cargo.toml
crates/streaming/src/: cache.rs  io.rs  lib.rs  pipeline.rs  protocol.rs  queue.rs  request.rs  residency.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  main.rs
data/terrain/metadata/: tileset.json
data/terrain/tiles/0/0/: 0.hdr
data/terrain/tiles/1/0/: 0.hdr  1.hdr
data/terrain/tiles/1/1/: 0.hdr  1.hdr
data/terrain/tiles/2/0/: 0.hdr  1.hdr  2.hdr  3.bin.aux.xml  3.hdr
data/terrain/tiles/2/1/: 0.hdr  1.hdr  2.hdr  3.hdr
data/terrain/tiles/2/2/: 0.hdr  1.hdr  2.hdr  3.hdr
data/terrain/tiles/2/3/: 0.hdr  1.hdr  2.hdr  3.hdr
data/terrain/working/: dem_4326.tif.aux.xml  dem_raw.vrt
docs/: README.md  SUMMARY.md  book.toml  index.html  index.md  preamble.md  releases.md
docs/api/: README.md  api-overview.md  compute-and-analysis.md  engine.md  errors-and-diagnostics.md  events-and-input.md  formats.md  layers.md  world-and-scene.md
docs/development/: README.md  benchmarks.md  build-and-run.md  coding-standards.md  contributing.md  profiling.md  release-notes.md  release-process.md  repo-layout.md  roadmap.md  testing.md  wasm-and-webgpu.md
docs/examples/: README.md  line-of-sight-3d.md  minimal-viewer.md  overlay-analysis.md  realtime-tracking.md  time-enabled-dataset.md
docs/getting-started/: README.md  concepts.md  demos.md  faq.md  overview.md  quickstart.md
docs/src/: SUMMARY.md  mvp-plan.md  preamble.md
docs/technical/: README.md  hex-grids-lod-smoothing.md  terrain-dem-pipeline.md  terrain-streaming.md
docs/technical/architecture/: README.md  agentic-capabilities.md  data-model.md  determinism-and-replay.md  engine-constitution.md  indices-and-query-model.md  render-pipeline.md  security-and-sandboxing.md  streaming-and-cache.md  system-overview.md  xr-and-vr.md
docs/technical/formats/: README.md  analysis-chunk-ach.md  scene-package-scn.md  terrain-chunk-tch.md  vector-chunk-vch.md  versioning.md
docs/technical/maths/: README.md  analysis-maths.md  geodesy-and-crs.md  precision-model.md  rendering-maths.md  spatial-indexing.md  spatiotemporal-foundations.md  temporal-indexing.md
docs/usage/: README.md  analysis.md  data-ingestion.md  data-time-tagging.md  filtering-and-search.md  layers.md  performance-tuning.md  symbolization.md  time-and-playback.md  troubleshooting.md
scripts/: dem_pipeline.py  entrypoint_dem_pipeline.sh  install-hooks.sh  release-notes.sh  release.sh
