[workspace]
resolver = "2"
members = [
    "crates/foundation",
    "crates/runtime",
    "crates/scene",
    "crates/streaming",
    "crates/catalog",
    "crates/formats",
    "crates/gpu",
    "crates/layers",
    "crates/compute",
    "crates/apps/web",
    "crates/apps/native",
    "crates/apps/server",
    "crates/tools"
]

[profile.release]
debug = true

# Pin once_cell to a version compatible with Rust 1.93+ stricter UB checks
[workspace.dependencies]
once_cell = "1.21.3"
