[package]
name = "catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blake3 = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
blake3 = { version = "1", default-features = false, features = ["std", "pure"] }

[dev-dependencies]
pretty_assertions = "1"
