[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
formats = { path = "../formats" }
foundation = { path = "../foundation" }
layers = { path = "../layers" }
scene = { path = "../scene" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
