[package]
name = "native"
version = "0.1.0"
edition = "2024"

[dependencies]
foundation = { path = "../../foundation" }
runtime = { path = "../../runtime" }
scene = { path = "../../scene" }
streaming = { path = "../../streaming" }
formats = { path = "../../formats" }
gpu = { path = "../../gpu" }
layers = { path = "../../layers" }
compute = { path = "../../compute" }

[[bin]]
name = "native"
path = "src/main.rs"
