[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
foundation = { path = "../../foundation" }
runtime = { path = "../../runtime" }
scene = { path = "../../scene" }
streaming = { path = "../../streaming" }
formats = { path = "../../formats" }
gpu = { path = "../../gpu" }
layers = { path = "../../layers" }
compute = { path = "../../compute" }
catalog = { path = "../../catalog" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "console"] }
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.5", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = { version = "28", features = ["webgl"] }
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
earcutr = "0.4"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
